--- a/app/src/main/res/layout/activity_fourth.xml
+++ b/app/src/main/res/layout/activity_fourth.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".IntentFilterExampleActivity">
+    tools:context=".launchmode.FourthActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
