--- a/app/src/main/res/layout/activity_register_for_result_example.xml
+++ b/app/src/main/res/layout/activity_register_for_result_example.xml
@@ -3,27 +3,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    tools:context=".launchmode.NotificationActivity">
-
-    <data>
-
-        <variable
-            name="notification"
-            type="com.eco.androidtutorial.model.Notification" />
-    </data>
-
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".RegisterForActivityResultExampleActivity">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/btn_nav_third_activity"
+            android:id="@+id/btn_import_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/navigate_to_third_activity"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="32dp"
+            android:text="Import image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_uri_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text=""
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_import_image" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
