--- a/app/src/main/res/layout/activity_select_image.xml
+++ b/app/src/main/res/layout/activity_select_image.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".IntentFilterExampleActivity">
+    tools:context=".permission.SelectImageActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
