--- a/app/src/main/res/layout/activity_sender.xml
+++ b/app/src/main/res/layout/activity_sender.xml
@@ -5,29 +5,26 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".registerforactivityresult.permission.SelectImageActivity">
+    tools:context=".senddatabetweenactivity.SenderActivity">
 
-
-    <ImageView
-        android:id="@+id/iv_image"
+    <Button
+        android:id="@+id/btn_send_data_intent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_select_image"
+        android:text="SendDataWithIntent"
+        app:layout_constraintBottom_toTopOf="@+id/btn_nav2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintVertical_bias="0.5" />
 
     <Button
-        android:id="@+id/btn_select_image"
+        android:id="@+id/btn_nav2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
-        android:text="@string/select_image"
+        android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/iv_image"
-        app:layout_constraintStart_toStartOf="@+id/iv_image"
-        app:layout_constraintTop_toBottomOf="@+id/iv_image" />
+        app:layout_constraintEnd_toEndOf="@+id/btn_send_data_intent"
+        app:layout_constraintStart_toStartOf="@+id/btn_send_data_intent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_send_data_intent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
