--- a/app/src/main/res/layout/activity_launchmode_example.xml
+++ b/app/src/main/res/layout/activity_launchmode_example.xml
@@ -8,35 +8,36 @@
     tools:context=".managementbackstack.manifestattributes.launchmode.LaunchModeExampleActivity">
 
     <Button
-        android:id="@+id/btn_notification_detail_activity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Demo single task launch mode"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_start_secondary_activity"
-        app:layout_constraintVertical_bias="0.5" />
-
-    <Button
-        android:id="@+id/btn_start_secondary_activity"
+        android:id="@+id/btn_demo_single_top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Demo single top launch mode"
-        app:layout_constraintBottom_toTopOf="@+id/btn_notification_detail_activity"
+        app:layout_constraintBottom_toTopOf="@+id/btn_demo_single_task"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btn_demo_single_task"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Demo single task launch mode"
+        app:layout_constraintBottom_toTopOf="@+id/btn_demo_single_instance"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_demo_single_top"
+        app:layout_constraintVertical_bias="0.5" />
+
+
+    <Button
+        android:id="@+id/btn_demo_single_instance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Demo single instance launch mode"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_notification_detail_activity"
+        app:layout_constraintTop_toBottomOf="@+id/btn_demo_single_task"
         app:layout_constraintVertical_bias="0.5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
