--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,22 +5,22 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="CalcButtonNormal">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">64dp</item>
-        <item name="android:layout_columnWeight">1</item>
-        <item name="android:background">@drawable/bg_button_normal</item>
-        <item name="android:textColor">#FFFFFF</item>
-        <item name="android:textSize">18sp</item>
-    </style>
+    <!--    <style name="CalcButtonNormal">-->
+    <!--        <item name="android:layout_width">0dp</item>-->
+    <!--        <item name="android:layout_height">64dp</item>-->
+    <!--        <item name="android:layout_columnWeight">1</item>-->
+    <!--        <item name="android:background">@drawable/bg_button_normal</item>-->
+    <!--        <item name="android:textColor">#FFFFFF</item>-->
+    <!--        <item name="android:textSize">18sp</item>-->
+    <!--    </style>-->
 
-    <style name="CalcButtonOperator" parent="CalcButtonNormal">
-        <item name="android:background">@drawable/bg_button_operator</item>
-    </style>
+    <!--    <style name="CalcButtonOperator" parent="CalcButtonNormal">-->
+    <!--        <item name="android:background">@drawable/bg_button_operator</item>-->
+    <!--    </style>-->
 
-    <style name="CalcButtonEqual" parent="CalcButtonNormal">
-        <item name="android:background">@drawable/bg_button_equal</item>
-    </style>
+    <!--    <style name="CalcButtonEqual" parent="CalcButtonNormal">-->
+    <!--        <item name="android:background">@drawable/bg_button_equal</item>-->
+    <!--    </style>-->
 
 
     <style name="Theme.AndroidTutorial" parent="Base.Theme.AndroidTutorial" />
