--- a/app/src/main/res/drawable/bg_button_normal.xml
+++ b/app/src/main/res/drawable/bg_button_normal.xml
@@ -4,12 +4,12 @@
     <gradient
         android:angle="90"
         android:endColor="@color/white_alpha_40"
-        android:startColor="@color/white_alpha_60"
+        android:startColor="#63FFFFFF"
         android:type="linear" />
 
     <stroke
         android:width="1dp"
-        android:color="@color/white_alpha_30" />
+        android:color="@color/white_alpha_60" />
     <corners android:radius="16dp" />
     <padding
         android:bottom="6dp"
