--- a/app/src/main/res/layout/item_layout_operator_calculator_1.xml
+++ b/app/src/main/res/layout/item_layout_operator_calculator_1.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -9,11 +9,10 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageButton
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn1"
             buttonConfig="@{buttons[0]}"
             android:layout_width="0dp"
@@ -36,12 +35,11 @@
             app:layout_constraintTop_toBottomOf="@+id/btn1"
             app:layout_constraintVertical_weight="16" />
 
-        <ImageButton
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn2"
             buttonConfig="@{buttons[1]}"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@drawable/bg_button_normal"
             app:layout_constraintBottom_toTopOf="@+id/view2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -60,12 +58,11 @@
             app:layout_constraintTop_toBottomOf="@+id/btn2"
             app:layout_constraintVertical_weight="22" />
 
-        <ImageButton
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn3"
             buttonConfig="@{buttons[2]}"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@drawable/bg_button_normal"
             app:layout_constraintBottom_toTopOf="@+id/view3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -84,7 +81,7 @@
             app:layout_constraintTop_toBottomOf="@+id/btn3"
             app:layout_constraintVertical_weight="16" />
 
-        <ImageButton
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn4"
             buttonConfig="@{buttons[3]}"
             android:layout_width="0dp"
@@ -108,7 +105,7 @@
             app:layout_constraintTop_toBottomOf="@+id/btn4"
             app:layout_constraintVertical_weight="16" />
 
-        <ImageButton
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn5"
             buttonConfig="@{buttons[4]}"
             android:layout_width="0dp"
