--- a/app/src/main/res/layout/layout_calculator_3.xml
+++ b/app/src/main/res/layout/layout_calculator_3.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="buttons"
-            type="java.util.List&lt;com.eco.androidtutorial.ui.customview.ButtonConfig>" />
+            type="java.util.List&lt;com.eco.androidtutorial.ui.calculator.ButtonConfig>" />
         />
     </data>
 
