--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_calculator"
+    android:background="@drawable/bg_calculator"
     android:orientation="vertical"
     android:padding="16dp"
     tools:context=".ui.calculator.CalculatorActivity">
