--- a/app/src/main/res/layout/bottom_sheet_paywall_50percent_weekly.xml
+++ b/app/src/main/res/layout/bottom_sheet_paywall_50percent_weekly.xml
@@ -40,6 +40,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
 
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -158,15 +159,16 @@
         app:layout_constraintTop_toBottomOf="@+id/btnClaimOffer" />
 
     <TextView
+        android:id="@+id/tvTermsAndPrivacy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_9sdp"
-        android:clickable="true"
         android:fontFamily="@font/funnel_sans_regular"
         android:gravity="center"
         android:lineHeight="@dimen/_10sdp"
         android:padding="16dp"
         android:text="@string/by_continuing_you_agree_to_our_terms_and_privacy_policies_n_subscription_gives_you_access_to_v9compress_s_premium_features_all_ads_will_be_removed_n_subscription_plans_are_automatically_renewed_and_can_be_canceled_anytime_in_subscriptions_on_google_play_n_you_will_not_be_charged_if_subscription_is_canceled_before_trial_period_ends_n_subscription_is_not_required_to_use_v9compress"
+        android:textColor="@color/color_EAF5F8"
         android:textSize="@dimen/_7sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
